<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/create_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_create_database" />

    <Button
        android:id="@+id/update_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update_database" />

    <Button
        android:id="@+id/insert_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_insert_data" />

    <Button
        android:id="@+id/update_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update_data" />

    <Button
        android:id="@+id/delete_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_data" />

    <Button
        android:id="@+id/query_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_query_data" />

</LinearLayout>